# salt-security-agent

./: README.md  config.toml  pyproject.toml
agent/: celery_app.py  cli.py  config.py  llm_agent.py  scheduler.py  tasks.py
agent/tools/: alert_tool.py  minion_tools.py  repo_tools.py  report_tool.py  salt_tools.py  system_tools.py
examples/systemd/: README.md  salt-agent-beat.service  salt-agent-worker.service  salt-security-agent-beat.service  salt-security-agent-worker.service
tasks/: default_task.md
threat_models/: default.md
