[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "salt-security-agent"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "celery[redis]>=5.3",
    "httpx>=0.27",
    "click>=8.1",
    "redis>=5.0",
]

[project.scripts]
salt-agent = "agent.cli:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["agent*"]
